Moved first introductory talk to subfolder; added more pictures; finilised slides

--- a/exercises/NLP_tasks.ipynb
+++ b/exercises/NLP_tasks.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "41d0bcb9-6f2c-4603-a4b4-c27a9dfcdac5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import nltk\n",
-    "\n",
     "from nltk.wsd import lesk\n",
     "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import wordnet as wn\n",
     "\n",
-    "from nltk.corpus import wordnet as wn"
+    "import re\n",
+    "import numpy as np"
    ]
   },
   {
@@ -51,6 +52,439 @@
     "nltk.download('averaged_perceptron_tagger')\n",
     "nltk.download('tagsets')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2465cb52-8401-4f91-8287-9bb5dd7240d0",
+   "metadata": {},
+   "source": [
+    "## Bag of Words (BoW)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e61d0fa6-21bc-4556-a4f5-dfad25060897",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.geeksforgeeks.org/bag-of-words-bow-model-in-nlp/\n",
+    "\n",
+    "text_1 = \"One of the other reviewers has mentioned that after watching just 1 Oz episode you'll be hooked. They are right, as this is exactly what happened with me.<br /><br />The first thing that struck me about Oz was its brutality and unflinching scenes of violence, which set in right from the word GO. Trust me, this is not a show for the faint hearted or timid. This show pulls no punches with regards to drugs, sex or violence. Its is hardcore, in the classic use of the word.<br /><br />It is called OZ as that is the nickname given to the Oswald Maximum Security State Penitentary. It focuses mainly on Emerald City, an experimental section of the prison where all the cells have glass fronts and face inwards, so privacy is not high on the agenda. Em City is home to many..Aryans, Muslims, gangstas, Latinos, Christians, Italians, Irish and more....so scuffles, death stares, dodgy dealings and shady agreements are never far away.<br /><br />I would say the main appeal of the show is due to the fact that it goes where other shows wouldn't dare. Forget pretty pictures painted for mainstream audiences, forget charm, forget romance...OZ doesn't mess around. The first episode I ever saw struck me as so nasty it was surreal, I couldn't say I was ready for it, but as I watched more, I developed a taste for Oz, and got accustomed to the high levels of graphic violence. Not just violence, but injustice (crooked guards who'll be sold out for a nickel, inmates who'll kill on order and get away with it, well mannered, middle class inmates being turned into prison bitches due to their lack of street skills or prison experience) Watching Oz, you may become comfortable with what is uncomfortable viewing....thats if you can get in touch with your darker side.\"\n",
+    "text_2 = \"This show was an amazing, fresh & innovative idea in the 70's when it first aired. The first 7 or 8 years were brilliant, but things dropped off after that. By 1990, the show was not really funny anymore, and it's continued its decline further to the complete waste of time it is today.<br /><br />It's truly disgraceful how far this show has fallen. The writing is painfully bad, the performances are almost as bad - if not for the mildly entertaining respite of the guest-hosts, this show probably wouldn't still be on the air. I find it so hard to believe that the same creator that hand-selected the original cast also chose the band of hacks that followed. How can one recognize such brilliance and then see fit to replace it with such mediocrity? I felt I must give 2 stars out of respect for the original cast that made this show such a huge success. As it is now, the show is just awful. I can't believe it's still on the air.\"\n",
+    "\n",
+    "text = text_1\n",
+    "\n",
+    "dataset = nltk.sent_tokenize(text)\n",
+    "\n",
+    "for i in range(len(dataset)):\n",
+    "    dataset[i] = dataset[i].lower()\n",
+    "    dataset[i] = re.sub('<[^<]+?>', '', dataset[i])\n",
+    "    dataset[i] = re.sub(r'\\W', ' ', dataset[i])\n",
+    "    dataset[i] = re.sub(r'\\s+', ' ', dataset[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d9084cfe-7234-4c6c-830b-5e98774856b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['one of the other reviewers has mentioned that after watching just 1 oz episode you ll be hooked ',\n",
+       " 'they are right as this is exactly what happened with me the first thing that struck me about oz was its brutality and unflinching scenes of violence which set in right from the word go ',\n",
+       " 'trust me this is not a show for the faint hearted or timid ',\n",
+       " 'this show pulls no punches with regards to drugs sex or violence ',\n",
+       " 'its is hardcore in the classic use of the word it is called oz as that is the nickname given to the oswald maximum security state penitentary ',\n",
+       " 'it focuses mainly on emerald city an experimental section of the prison where all the cells have glass fronts and face inwards so privacy is not high on the agenda ',\n",
+       " 'em city is home to many aryans muslims gangstas latinos christians italians irish and more so scuffles death stares dodgy dealings and shady agreements are never far away i would say the main appeal of the show is due to the fact that it goes where other shows wouldn t dare ',\n",
+       " 'forget pretty pictures painted for mainstream audiences forget charm forget romance oz doesn t mess around ',\n",
+       " 'the first episode i ever saw struck me as so nasty it was surreal i couldn t say i was ready for it but as i watched more i developed a taste for oz and got accustomed to the high levels of graphic violence ',\n",
+       " 'not just violence but injustice crooked guards who ll be sold out for a nickel inmates who ll kill on order and get away with it well mannered middle class inmates being turned into prison bitches due to their lack of street skills or prison experience watching oz you may become comfortable with what is uncomfortable viewing thats if you can get in touch with your darker side ']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e2a399e5-546b-4ba5-a14d-a6c97475ad24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating the Bag of Words model\n",
+    "word2count = {}\n",
+    "for data in dataset:\n",
+    "    words = nltk.word_tokenize(data)\n",
+    "    for word in words:\n",
+    "        if word not in word2count.keys():\n",
+    "            word2count[word] = 1\n",
+    "        else:\n",
+    "            word2count[word] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7cf65bbf-2bb3-4616-97a1-dc54c1d7871f",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'one': 1,\n",
+       " 'of': 7,\n",
+       " 'the': 16,\n",
+       " 'other': 2,\n",
+       " 'reviewers': 1,\n",
+       " 'has': 1,\n",
+       " 'mentioned': 1,\n",
+       " 'that': 4,\n",
+       " 'after': 1,\n",
+       " 'watching': 2,\n",
+       " 'just': 2,\n",
+       " '1': 1,\n",
+       " 'oz': 6,\n",
+       " 'episode': 2,\n",
+       " 'you': 3,\n",
+       " 'll': 3,\n",
+       " 'be': 2,\n",
+       " 'hooked': 1,\n",
+       " 'they': 1,\n",
+       " 'are': 2,\n",
+       " 'right': 2,\n",
+       " 'as': 4,\n",
+       " 'this': 3,\n",
+       " 'is': 9,\n",
+       " 'exactly': 1,\n",
+       " 'what': 2,\n",
+       " 'happened': 1,\n",
+       " 'with': 5,\n",
+       " 'me': 4,\n",
+       " 'first': 2,\n",
+       " 'thing': 1,\n",
+       " 'struck': 2,\n",
+       " 'about': 1,\n",
+       " 'was': 3,\n",
+       " 'its': 2,\n",
+       " 'brutality': 1,\n",
+       " 'and': 6,\n",
+       " 'unflinching': 1,\n",
+       " 'scenes': 1,\n",
+       " 'violence': 4,\n",
+       " 'which': 1,\n",
+       " 'set': 1,\n",
+       " 'in': 3,\n",
+       " 'from': 1,\n",
+       " 'word': 2,\n",
+       " 'go': 1,\n",
+       " 'trust': 1,\n",
+       " 'not': 3,\n",
+       " 'a': 3,\n",
+       " 'show': 3,\n",
+       " 'for': 5,\n",
+       " 'faint': 1,\n",
+       " 'hearted': 1,\n",
+       " 'or': 3,\n",
+       " 'timid': 1,\n",
+       " 'pulls': 1,\n",
+       " 'no': 1,\n",
+       " 'punches': 1,\n",
+       " 'regards': 1,\n",
+       " 'to': 6,\n",
+       " 'drugs': 1,\n",
+       " 'sex': 1,\n",
+       " 'hardcore': 1,\n",
+       " 'classic': 1,\n",
+       " 'use': 1,\n",
+       " 'it': 6,\n",
+       " 'called': 1,\n",
+       " 'nickname': 1,\n",
+       " 'given': 1,\n",
+       " 'oswald': 1,\n",
+       " 'maximum': 1,\n",
+       " 'security': 1,\n",
+       " 'state': 1,\n",
+       " 'penitentary': 1,\n",
+       " 'focuses': 1,\n",
+       " 'mainly': 1,\n",
+       " 'on': 3,\n",
+       " 'emerald': 1,\n",
+       " 'city': 2,\n",
+       " 'an': 1,\n",
+       " 'experimental': 1,\n",
+       " 'section': 1,\n",
+       " 'prison': 3,\n",
+       " 'where': 2,\n",
+       " 'all': 1,\n",
+       " 'cells': 1,\n",
+       " 'have': 1,\n",
+       " 'glass': 1,\n",
+       " 'fronts': 1,\n",
+       " 'face': 1,\n",
+       " 'inwards': 1,\n",
+       " 'so': 3,\n",
+       " 'privacy': 1,\n",
+       " 'high': 2,\n",
+       " 'agenda': 1,\n",
+       " 'em': 1,\n",
+       " 'home': 1,\n",
+       " 'many': 1,\n",
+       " 'aryans': 1,\n",
+       " 'muslims': 1,\n",
+       " 'gangstas': 1,\n",
+       " 'latinos': 1,\n",
+       " 'christians': 1,\n",
+       " 'italians': 1,\n",
+       " 'irish': 1,\n",
+       " 'more': 2,\n",
+       " 'scuffles': 1,\n",
+       " 'death': 1,\n",
+       " 'stares': 1,\n",
+       " 'dodgy': 1,\n",
+       " 'dealings': 1,\n",
+       " 'shady': 1,\n",
+       " 'agreements': 1,\n",
+       " 'never': 1,\n",
+       " 'far': 1,\n",
+       " 'away': 2,\n",
+       " 'i': 6,\n",
+       " 'would': 1,\n",
+       " 'say': 2,\n",
+       " 'main': 1,\n",
+       " 'appeal': 1,\n",
+       " 'due': 2,\n",
+       " 'fact': 1,\n",
+       " 'goes': 1,\n",
+       " 'shows': 1,\n",
+       " 'wouldn': 1,\n",
+       " 't': 3,\n",
+       " 'dare': 1,\n",
+       " 'forget': 3,\n",
+       " 'pretty': 1,\n",
+       " 'pictures': 1,\n",
+       " 'painted': 1,\n",
+       " 'mainstream': 1,\n",
+       " 'audiences': 1,\n",
+       " 'charm': 1,\n",
+       " 'romance': 1,\n",
+       " 'doesn': 1,\n",
+       " 'mess': 1,\n",
+       " 'around': 1,\n",
+       " 'ever': 1,\n",
+       " 'saw': 1,\n",
+       " 'nasty': 1,\n",
+       " 'surreal': 1,\n",
+       " 'couldn': 1,\n",
+       " 'ready': 1,\n",
+       " 'but': 2,\n",
+       " 'watched': 1,\n",
+       " 'developed': 1,\n",
+       " 'taste': 1,\n",
+       " 'got': 1,\n",
+       " 'accustomed': 1,\n",
+       " 'levels': 1,\n",
+       " 'graphic': 1,\n",
+       " 'injustice': 1,\n",
+       " 'crooked': 1,\n",
+       " 'guards': 1,\n",
+       " 'who': 2,\n",
+       " 'sold': 1,\n",
+       " 'out': 1,\n",
+       " 'nickel': 1,\n",
+       " 'inmates': 2,\n",
+       " 'kill': 1,\n",
+       " 'order': 1,\n",
+       " 'get': 2,\n",
+       " 'well': 1,\n",
+       " 'mannered': 1,\n",
+       " 'middle': 1,\n",
+       " 'class': 1,\n",
+       " 'being': 1,\n",
+       " 'turned': 1,\n",
+       " 'into': 1,\n",
+       " 'bitches': 1,\n",
+       " 'their': 1,\n",
+       " 'lack': 1,\n",
+       " 'street': 1,\n",
+       " 'skills': 1,\n",
+       " 'experience': 1,\n",
+       " 'may': 1,\n",
+       " 'become': 1,\n",
+       " 'comfortable': 1,\n",
+       " 'uncomfortable': 1,\n",
+       " 'viewing': 1,\n",
+       " 'thats': 1,\n",
+       " 'if': 1,\n",
+       " 'can': 1,\n",
+       " 'touch': 1,\n",
+       " 'your': 1,\n",
+       " 'darker': 1,\n",
+       " 'side': 1}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word2count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c40714b8-f9e3-4e44-814d-172a47ef445b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import heapq\n",
+    "freq_words = heapq.nlargest(100, word2count, key=word2count.get)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a8c42f63-3034-4e04-ab12-57de241f7bd4",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['the',\n",
+       " 'is',\n",
+       " 'of',\n",
+       " 'oz',\n",
+       " 'br',\n",
+       " 'and',\n",
+       " 'to',\n",
+       " 'it',\n",
+       " 'i',\n",
+       " 'with',\n",
+       " 'for',\n",
+       " 'that',\n",
+       " 'as',\n",
+       " 'me',\n",
+       " 'violence',\n",
+       " 'you',\n",
+       " 'll',\n",
+       " 'this',\n",
+       " 'was',\n",
+       " 'in',\n",
+       " 'not',\n",
+       " 'a',\n",
+       " 'show',\n",
+       " 'or',\n",
+       " 'on',\n",
+       " 'prison',\n",
+       " 'so',\n",
+       " 't',\n",
+       " 'forget',\n",
+       " 'other',\n",
+       " 'watching',\n",
+       " 'just',\n",
+       " 'episode',\n",
+       " 'be',\n",
+       " 'are',\n",
+       " 'right',\n",
+       " 'what',\n",
+       " 'first',\n",
+       " 'struck',\n",
+       " 'its',\n",
+       " 'word',\n",
+       " 'city',\n",
+       " 'where',\n",
+       " 'high',\n",
+       " 'more',\n",
+       " 'away',\n",
+       " 'say',\n",
+       " 'due',\n",
+       " 'but',\n",
+       " 'who',\n",
+       " 'inmates',\n",
+       " 'get',\n",
+       " 'one',\n",
+       " 'reviewers',\n",
+       " 'has',\n",
+       " 'mentioned',\n",
+       " 'after',\n",
+       " '1',\n",
+       " 'hooked',\n",
+       " 'they',\n",
+       " 'exactly',\n",
+       " 'happened',\n",
+       " 'thing',\n",
+       " 'about',\n",
+       " 'brutality',\n",
+       " 'unflinching',\n",
+       " 'scenes',\n",
+       " 'which',\n",
+       " 'set',\n",
+       " 'from',\n",
+       " 'go',\n",
+       " 'trust',\n",
+       " 'faint',\n",
+       " 'hearted',\n",
+       " 'timid',\n",
+       " 'pulls',\n",
+       " 'no',\n",
+       " 'punches',\n",
+       " 'regards',\n",
+       " 'drugs',\n",
+       " 'sex',\n",
+       " 'hardcore',\n",
+       " 'classic',\n",
+       " 'use',\n",
+       " 'called',\n",
+       " 'nickname',\n",
+       " 'given',\n",
+       " 'oswald',\n",
+       " 'maximum',\n",
+       " 'security',\n",
+       " 'state',\n",
+       " 'penitentary',\n",
+       " 'focuses',\n",
+       " 'mainly',\n",
+       " 'emerald',\n",
+       " 'an',\n",
+       " 'experimental',\n",
+       " 'section',\n",
+       " 'all',\n",
+       " 'cells']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "freq_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1875cc85-914b-4968-9d03-fcdd904f95de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
